# bubbleUI

./: .gitignore  README.md  RELEASING.md  pyproject.toml  requirements.txt
.github/workflows/: package-bubbleui-js.yml  release-bubbleui.yml
bubbleui/: __init__.py  preview.py
bubbleui/components/: __init__.py  bubble_badge.py  bubble_button.py  bubble_card.py  bubble_empty_state.py  bubble_input.py  bubble_section_header.py  bubble_stat_tile.py
bubbleui/design_token/: __init__.py  theme.py
examples/python-exe/: README.md  all_components.py  showcase.py
examples/web-react/: README.md  index.html  package.json
examples/web-react/src/: App.jsx  main.jsx  styles.css
scripts/: bump_version.py  release_metadata.py  release_prepare.py
tests/: smoke_test.py
