[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubbleui"
version = "0.1.0"
description = "A simple Flet-based UI library starter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["flet>=0.28.0"]

[tool.setuptools.packages.find]
include = ["bubbleui", "bubbleui.*"]