[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubbleui"
dynamic = ["version"]
description = "BubbleUI Python package for Flet desktop and packaged exe apps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["flet>=0.28.0"]

[tool.setuptools.packages.find]
include = ["bubbleui", "bubbleui.*"]

[tool.setuptools.dynamic]
version = { attr = "bubbleui._version.__version__" }
